@@ -45,6 +45,7 @@
 
 # Create HD Wallet in BIP39 mode with 12, 15, 18, 21 or 24 words seed.
 # Default value of 0 creates a wallet that is not BIP39 compatible.
+# Value -1 means that the seed password is BIP39 compatible mnemonic.
 # The value is ignored for wallet type different than 4.
 #bip39=12
 
